--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+* {box-sizing: border-box;}
+
 body {
   background-attachment: scroll;
   margin-top: 0px;
@@ -5,6 +7,71 @@ body {
   margin-right: 0px;
   margin-left: 0px;
 }
+
+.header{
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 0px 0px;
+  margin:1px
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  position: relative;
+}
+.logo{
+  margin:10px;
+  width:120px;
+  height: 100px;
+  position: absolute;
+}
+
+.header-name{
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Metal Mania', cursive;
+  font-style: normal;
+  font-size: 6em;
+  margin-right:10%;
+  position: sticky;
+}
+.header-right {
+  float: right;
+  position:static;
+  object-position: top;
+}
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+  position: relative;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+  margin:2px;
+}
+
+.header a.hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
 a:link {
   background-color: transparent;
   text-decoration: none;
@@ -22,26 +89,15 @@ a:active {
   background-color: transparent;
   text-decoration: none;
 }
-.header{
-  background-image: url("background.jpg") no-repeat scroll center top;
-  overflow: hidden;
-  background-color: ;
-  padding: 0px 0px;
-  margin:0px
-}
-.header-img {
-  background: url("logo.png") no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
-}
-.header-name{
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Metal Mania', cursive;
-  font-style: normal;
-  font-size: 6em;
-  margin-right:10%;
 
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
 }
