--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,24 @@ body {
   margin-right: 0px;
   margin-left: 0px;
 }
+/** Links **/
+a:link {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active {
+  background-color: transparent;
+  text-decoration: none;
+}
 
 .header{
   overflow: hidden;
@@ -32,13 +50,14 @@ body {
   font-family: 'Metal Mania', cursive;
   font-style: normal;
   font-size: 6em;
-  margin-right:10%;
   position: sticky;
 }
-.header-right {
+.header-button {
   float: right;
-  position:static;
+  position:relative;
   object-position: top;
+  font-family: 'arial',times new roman;
+  margin:10px;
 }
 .header a {
   float: left;
@@ -72,24 +91,39 @@ body {
   float: right;
 }
 
-a:link {
-  background-color: transparent;
-  text-decoration: none;
+ul {
+  list-style-type: none;;
+  overflow: hidden;
+  
 }
-a:visited {
-  background-color: transparent;
-  text-decoration: none;
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
-a:hover {
-  color: black;
-  background-color: transparent;
-  text-decoration: none;
+.links{
+  float:top;
+  width:100%;
+  padding:0px;
+  margin-right:0px;
+  margin-left:0px;
+  background-color: #333;
 }
-a:active {
-  background-color: transparent;
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
+li a:hover {
+  background-color: white;
+  color:black;
+}
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -100,4 +134,109 @@ a:active {
   .header-right {
     float: none;
   }
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+#myBtn {
+  display: none; /*km]
+   ]\-1en by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: black; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+#myBtn:hover {
+  background-color: #555;
+}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides-fade{
+  width:80%;
+  object-position:center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+.body-text{
+  float:left;
+  font-family: 'Oxygen', sans-serif;
+  margin: 20px;
+  text-align: justify;
+}
+.body-main{
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Oxygen', sans-serif; 
+
+}
+.reference{
+  float:top;
+  padding:0px;
+  margin-right:0px;
+  margin-left:0px;
+  background-color: none;
+}
+.youtube,.pdf,.maps{
+  text-align:center;
+  float:left;
+  margin-top: 10px;
+  margin-bottom: 30x;
+  margin-left: 10%;
+  margin-right: 10%px;
 }
