--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,8 @@ li a:hover {
   float:left;
   font-family: 'Oxygen', sans-serif;
   margin-left: 20px;
-  text-align: justify-all;
+  margin-right: 20px;
+  text-align: justify;
 }
 
 .body-title{
