--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ li a:hover {
 
 }
 .reference{
+  align-items: center;
   float:top;
   padding:0px;
   margin-right:0px;
@@ -225,7 +226,7 @@ li a:hover {
   background-color: none;
 }
 .youtube,.pdf,.maps{
-  text-align:center;
+  align-items: center;
   float:left;
   margin-top: 10px;
   margin-bottom: 30x;
