--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,52 @@ li a:hover {
   margin-left: 10%;
   margin-right: 10%px;
 }
-@media screen and (max-width: 500px) {
+
+
+/**-------------------------------------------------------------------**/
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+}
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+}
+
+/********** Small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .logo{
+    align-items: center;
+  margin:10px;
+  width:120px;
+  height: 100px;
+  position: absolute;
+}
+
+  
+}
+
+/********** Extra small devices only **********/
+@media (max-width: 767px) {
+  .logo{
+    align-items: center;
+  margin:10px;
+  width:120px;
+  height: 100px;
+  position: absolute;
+}
+  
+}
+
+
+/********** Super extra small devices Only **********/
+@media (max-width: 479px) {
+  .logo{
+    align-items: center;
+  margin:10px;
+  width:120px;
+  height: 100px;
+  position: absolute;
+}
   
 }
