--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,21 @@ li a:hover {
   font-family: 'Oxygen', sans-serif;
   text-decoration-color: white;
   text-align:left;
+}
 
+.panel-footer {
+  background-color: black;
+  color: white;
+  font-family: 'Oxygen', sans-serif;
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+  font-size: 1.5em;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
 }
 
 /**-------------------------------------------------------------------*
@@ -274,6 +288,16 @@ li a:hover {
   .header-button {
     object-position: center;
     margin:4px;
+  }
+  .panel-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .panel-footer section hr {
+    width: 50%;
   }
 
 }
