--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,19 @@ li a:hover {
   }
   .footer-text{
   font-size: 20px;
+ }
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
 }
 
 /********** Extra small devices only **********/
