--- a/css/styles.css
+++ b/css/styles.css
@@ -285,17 +285,43 @@ li a:hover {
   font-size: 20px;
  }
 }
+/** Buttons **/
 .fa {
   padding: 20px;
   font-size: 30px;
   width: 50px;
   text-align: center;
   text-decoration: none;
-  margin: 5px 2px;
+  margin: 0px 5px 2px 0px;
 }
 
 .fa:hover {
     opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.fa-skype {
+  background: #00aff0;
+  color: white;
+}
+.fa-yahoo {
+  background: #430297;
+  color: white;
 }
 
 /********** Extra small devices only **********/
