--- a/css/styles.css
+++ b/css/styles.css
@@ -285,10 +285,10 @@ li a:hover {
     text-align: center;
 }
 #nav-list {
-  float:top;
+  float:left;
   width:100.5%;
-  padding:0px;
-  margin:0px;
+  padding:-5px;
+  margin-left:0px;
   background-color: #333;
   font-family: 'Oxygen', sans-serif;
 }
@@ -308,7 +308,7 @@ li a:hover {
 }
 .navbar-header button.navbar-toggle {
   clear: both;
-  margin-top: -30px;
+  margin-top: 0px;
 }
 .text-bar{
   text-align: center;
