--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/** BODY DEFAULT CSS STYLES **/
 * {box-sizing: border-box;}
 
 body {
@@ -9,7 +10,8 @@ body {
   margin-right: 0px;
   margin-left: 0px;
 }
-/** Links **/
+
+/** BODY DEFAULT LINKS CSS STYLES **/
 a:link {
   background-color: transparent;
   text-decoration: none;
@@ -28,6 +30,7 @@ a:active {
   text-decoration: none;
 }
 
+/**  HEADER CSS STYLES  **/
 .header{
   overflow: hidden;
   padding: 0px 0px;
@@ -53,6 +56,8 @@ a:active {
   font-family: 'Oxygen', sans-serif;
   margin:10px;
 }
+
+/** HEADER LINKS CSS STYLES **/
 .header a {
   float: left;
   color: black;
@@ -64,30 +69,20 @@ a:active {
   border-radius: 4px;
   position: relative;
 }
-
 .header a.active {
   background-color: dodgerblue;
   color: white;
   margin:2px;
 }
-
 .header a.hover {
   background-color: #ddd;
   color: black;
 }
 
-.header-right {
-  float: right;
-}
-
+/** MENU BAR CSS STYLES **/
 ul {
   list-style-type: none;;
   overflow: hidden;
-  
-}
-.sticky {
-
-  top: 0;
 }
 .links{
   float:top;
@@ -112,6 +107,8 @@ li a:hover {
   background-color: white;
   color:black;
 }
+
+/** TOP BUTTON CSS STYLES **/
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -119,47 +116,41 @@ li a:hover {
   animation-duration: 1.5s;
 }
 #myBtn {
-  display: none; /*km]
-   ]\-1en by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: black; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
 }
 #myBtn:hover {
   background-color: #555;
 }
-/* Slideshow container */
+/** IMAGE SLIDESHOW CSS STYLES **/
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
-
 .mySlides-fade{
   width:80%;
   object-position:center;
 }
-
-/* Number text (1/3 etc) */
-.numbertext {
+.numbertext {          /* Number text (1/3 etc) */
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
 }
-
-/* The dots/bullets/indicators */
-.dot {
+.dot {                /* The dots/bullets/indicators */
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -168,28 +159,24 @@ li a:hover {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active {
   background-color: #717171;
 }
-
-/* Fading animation */
-.fade {
+.fade {                 /* Fading animation */
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
+/** MAIN BODY CSS STYLES **/
 #body-text{
   float:left;
   font-family: 'Oxygen', sans-serif;
@@ -197,7 +184,6 @@ li a:hover {
   margin-right: 40px;
   text-align: justify;
 }
-
 .body-title{
   text-align: center;
   margin-top:20px;
@@ -228,7 +214,7 @@ li a:hover {
   margin-left:10%;
   margin-right:10%;
 }
-
+/** FOOTER CSS STLES **/
 .footer{
   width:100%;
   height:350px;
@@ -239,7 +225,6 @@ li a:hover {
   text-decoration-color: white;
   text-align:left;
 }
-
 .panel-footer {
   background-color: black;
   color: white;
@@ -248,8 +233,7 @@ li a:hover {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #222;
-  border-top: 0;
-  
+  border-top: 0; 
 }
 .panel-footer a:link,a:visited,a:active{
   color:white;
@@ -263,7 +247,7 @@ li a:hover {
   font-family: 'Oxygen', sans-serif;
   font-size: 1.2em;
 }
-/** Buttons **/
+    /** SOCIAL MEDIA BUTTONS **/
 .fa {
   padding: 20px;
   font-size: 30px;
@@ -272,11 +256,9 @@ li a:hover {
   text-decoration: none;
   margin: 0px 5px 2px 0px;
 }
-
 .fa:hover {
     opacity: 0.7;
 }
-
 .fa-facebook {
   background: #3B5998;
   color: white;
@@ -301,51 +283,49 @@ li a:hover {
   background: #430297;
   color: white;
 }
+    /** VISITOR COUNT **/
 .visitor-count{
     text-align: center;
 }
 
-/**-------------------------------------------------------------------*
+/**-------------------------------------------------------------------**/
 /********** Large devices only **********/
 @media (min-width: 1200px) {
   .header-name{
     font-size: 6em;
   }
-
 }
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
   .header-name{
     font-size: 5em;
-  }
-  
+  } 
 }
 
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-    .header-button{
-      display:none;
-    }
-      .header-name{
+  .header-button{
+    display:none;
+  }
+  .header-name{
     font-size: 4em;
-    } 
+  } 
   .header-button {
     object-position: center;
     margin:5px;
   }
   .footer-text{
-  font-size: 20px;
+    font-size: 20px;
   }
 }
 
-
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-.header-button{
-      display:none;
-    }
-     .header-name{
+  .header-button{
+   display:none;
+  }
+  .header-name{
     font-size: 3em;
   }
   .header-button {
@@ -363,7 +343,9 @@ li a:hover {
     width: 50%;
   }
   .footer-text{
-  font-size: 18px;
+    font-size: 18px;
   }
-
 }
+
+/*******END OF CSS STLESSHEET ********/
+/***      BY : ROHIT KUMAR         ***/
