--- a/css/styles.css
+++ b/css/styles.css
@@ -167,16 +167,16 @@ li a:active {
 }
 .fade {                 /* Fading animation */
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 1s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 1s;
 }
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .8} 
   to {opacity: 1}
 }
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .8} 
   to {opacity: 1}
 }
 /** MAIN BODY CSS STYLES **/
@@ -186,6 +186,7 @@ li a:active {
   margin-left: 40px;
   margin-right: 40px;
   text-align: justify;
+  background-color: white;
 }
 .body-title{
   text-align: center;
