--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ li a:active {
   background-color: #555;
 }
 /** IMAGE SLIDESHOW CSS STYLES **/
+img {
+  vertical-align: middle;
+}
+/** IMAGE SLIDESHOW CSS STYLES **/
 .slideshow-container {
   max-width: 1000px;
   position: relative;
@@ -184,6 +188,7 @@ li a:active {
   font-family: 'Oxygen', sans-serif;
   margin-left: 40px;
   margin-right: 40px;
+  padding: 20px;
   text-align: justify;
   background-color: white;
 }
@@ -334,6 +339,16 @@ li a:active {
   .header-button {
     object-position: center;
     margin:4px;
+  }
+  #body-text{
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: auto;
+    font-size: 1em;
+  }
+  .body-title{
+    margin-top:10px;
+    font-size: 1.5em;
   }
   .panel-footer section {
     margin-bottom: 10px;
