--- a/css/style.css
+++ b/css/style.css
@@ -197,8 +197,24 @@ img {
   margin-top:20px;
   font-size: 2em;
   font-family: 'Oxygen', sans-serif; 
-
 }
+#body-text-1{
+  float:left;
+  font-family: 'Oxygen', sans-serif;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding: 20px;
+  font-size: 1.5em;
+  text-align: justify;
+  background-color: white;
+}
+.body-title-1{
+  text-align: center;
+  margin-top:20px;
+  font-size: 2em;
+  font-family: 'Oxygen', sans-serif; 
+
+}-
 .reference{
   align-items: center;
   float:top;
