--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,16 @@ span.referen a:hover{
     margin-top:10px;
     font-size: 1.5em;
   }
+  #body-text-1{
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: auto;
+    font-size: 1.1em;
+  }
+  .body-title-1{
+    margin-top:10px;
+    font-size: 1.5em; 
+  }
   .panel-footer section {
     margin-bottom: 10px;
     text-align: center;
