--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ li a:active {
 #myBtn {
   display: none;
   position: fixed;
-  bottom: 5px;
-  right: 5px;
+  bottom: 30px;
+  right:30px;
   z-index: 99;
   border: none;
   outline: none;
@@ -134,7 +134,7 @@ li a:active {
   font-size: 20px;
 }
 #myBtn:hover {
-  background-color: #555;
+  background-color: black;
 }
 /** IMAGE SLIDESHOW CSS STYLES **/
 img {
@@ -191,7 +191,7 @@ img {
   margin-right: 40px;
   padding: 20px;
   text-align: justify;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .body-title{
   text-align: center;
@@ -208,7 +208,6 @@ img {
   padding: 20px;
   font-size: 1.5em;
   text-align: justify;
-  background-color: rgba(255, 255, 255, 0.7);
 }
 .body-title-1{
   text-align: center;
